@@ -919,22 +919,29 @@ public:
 	 *  ancestral generations, the starting population is the greatest ancestral
 	 *  generation of \e ped. The mating scheme creates an offspring generation
 	 *  that match the size of generation \c N-1 and chooses parents according
-	 *  to the parents of individuals at this generation. The parental indexes
-	 *  are specified by \e fatherField and \e motherField, which are usually
-	 *  \c father_idx and \c mother_idx respectively. Depending on the \e gen
+	 *  to the parents of individuals at this generation. Depending on the \e gen
 	 *  parameter of the simulator, the process continues generation by
 	 *  generation for \c N generations if \c gen >= N), or \c gen generations
 	 *  if \c gen < \c N. During the evolution, an offspring generator
 	 *  \e generator is used to produce one offspring at a time, regardless of
-	 *  the \e numOffspring setting of this offspring generator.\n
+	 *  the \e numOffspring setting of this offspring generator. If individuals
+	 *  in pedigree \e ped has only one parent, the offspring generator should
+	 *  be compatible.\n
 	 *
-	 *  If individuals in pedigree \e ped has only one parent, you can use one of
-	 *  \e fatherField and \e motherField to specify the parent, and set another
-	 *  filed to an empty string. A compatible offspring generator that generates
-	 *  offspring from one parent should be used in this case.\n
+	 *  By default, the pedigree mating scheme does not set offspring sex and
+	 *  affection status using sex and affection status of corresponding
+	 *  individuals in the pedigree. However, if such information is valid
+	 *  in the pedigree object \e ped, you can set parameters \e setSex and/or
+	 *  \e setAffection to \c True to set sex and/of affection status to
+	 *  offspring during the evolutionary process. Similarly, you can specify
+	 *  some information fields in \e copyFields to copy some information
+	 *  fields from pedigree to the evolving population. Note that these
+	 *  information will be copied also to the starting population (from the
+	 *  greatest ancestral generation in \e ped).
 	 */
 	pedigreeMating(const pedigree & ped, const offspringGenerator & generator,
-		const string & fatherField = "father_idx", const string & motherField = "mother_idx");
+		bool setSex = false, bool setAffection = false,
+		const vectorstr & copyFields = vectorstr());
 
 	/// destructor
 	~pedigreeMating();
@@ -967,11 +974,13 @@ private:
 	pedigree m_ped;
 
 	offspringGenerator * m_generator;
-	
+
 	int m_parentalPopSize;
 
-	string m_fatherField;
-	string m_motherField;
+	bool m_setSex;
+	bool m_setAffection;
+
+	vectorstr m_copyFields;
 };
 
 
