@@ -192,6 +192,9 @@ enum SexChoice {
 typedef unsigned char TraitIndexType;
 const unsigned char MaxTraitIndex = std::numeric_limits<TraitIndexType>::max();
 
+const string ParentsFields[2] = {"father_idx", "mother_idx"};
+
+
 
 // iteratable and visible are two different concepts.
 // When a population is activated by setting the visible flag
