@@ -25,6 +25,8 @@ version 0.9.1 - Not released, available at https://simupop.svn.sourceforge.net/s
 		from heteroMating.
   - NEW: Allow a demographic function to return a number if there is only one
 		subpopulation.
+  - NEW: Allow pedigreeMating to set sex, affection status and some information
+		fields from the pedigree object.
 
 version 0.9.0 - (Rev 2130) Dec 15, 2008 (tagged, but not publically released)
   - CHG: add population::setSubPopByIndInfo to allow flexible migration.
